# jcloud

./: .env.example  .gitignore  CLAUDE.md  MAC_SETUP.md  Makefile  README.md  SKILLS.md  WINDOWS_SETUP.md  pyproject.toml
.claude/skills/: access-review.md  bind-device.md  device-audit.md  export-inventory.md  force-sync.md  harden-ssh.md  jc-status.md  lock-user.md  lockdown.md  login-history.md  mfa-audit.md  offboard-user.md  onboard-user.md  recover-device.md  reset-password.md  run-command.md  security-audit.md  soc2-report.md  sync-state.md  transfer-device.md  update-api.md
src/jcloud/: client.py
src/jcloud/api/: apps.py  authn.py  commands.py  events.py  groups.py  insights.py  iplists.py  meta.py  policies.py  radius.py  soc2.py  systems.py  users.py
src/jcloud/cli/: apps.py  authn.py  commands.py  events.py  groups.py  insights.py  iplists.py  main.py  meta.py  policies.py  radius.py  soc2.py  systems.py  users.py
